EM: code added but app won't run at the moment

--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -29,7 +29,10 @@
                             <a class="nav-link" href="{{ url_for('create') }}">Create a Recipe <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('recipe_list') }}">View Recipes</a>
+                            <a class="nav-link" href="{{ url_for('edit_recipe') }}">View and Edit Recipes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('cuisine_view') }}">View Recipes</a>
                         </li>
                     </ul>
                 </div>
