--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -2,6 +2,30 @@
 
 {% block body %}
 
-    
+{% for recipe in recipes %}
+
+  <div class="card recipe-card border-2 mt-2" id = recipeNumber{{recipe.id} >
+      <div class="row align-items-start no-gutters">
+          <div class="col mx-auto">
+                <div class="card-block px-1 mb-2">
+                    <h4 class="card-header">{{ recipe.recipeName }}</h4>
+                    <p class="card-text">Foodie: {{ recipe.creatorName }}</p>
+                    <p class="card-text">Description: {{ recipe.description }}</p>
+                    <p class="card-text">Ingredients: {{ recipe.ingredients }}</p>
+                    <p class="card-text">Instructions: {{ recipe.instructions }}</p>
+                    <p class="card-text">Calories: {{ recipe.calories }}</p>
+                    <p class="card-text">Difficulty: {{ recipe.difficulty }}</p>
+                </div>
+                <form class = view-form action="{{ url_for('edit_recipe', recipe_id = recipe_id) }}" method="GET">
+                    <input class = "btn btn-info view-btn" type="submit" name="update" value="View">
+                </form>
+                <form action="/home/delete/recipe" method="POST">
+                    <button class="button">Delete</button>
+                </form>
+          </div>
+      </div>
+  </div>
+
+{% endfor %}
 
 {% enblock body %}
