--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -29,12 +29,13 @@
                             <a class="nav-link" href="{{ url_for('create') }}">Create a Recipe <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('edit_recipe') }}">View and Edit Recipes</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('cuisine_view') }}">View Recipes</a>
+                            <a class="nav-link" href="{{ url_for('create_cuisine') }}">Cuisine Portal</a>
                         </li>
                     </ul>
+                    <form class="form-inline" action="{{ url_for('search_recipe') }}" method="POST">
+                        <input class="form-control h-25 mr-sm-2" name="recipe_name" type="search" placeholder="Search Recipes" aria-label="Search" required>
+                        <button class="btn btn-danger btn-sm mt-2" type="submit">Search</button>
+                    </form>
                 </div>
             </nav>
 
