--- a/application/templates/cuisine.html
+++ b/application/templates/cuisine.html
@@ -2,24 +2,20 @@
 
 {% block body %}
 
-{% for cuisine in cuisine %}
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+     <ul class="alert slert-info alert-dismissable">
+         {% for message in messages %}
+         <li>{{ message }}</li>
+         {% endfor %}
+     </ul>
+  {% endif %}
+{% endwith %}
 
-<div class="card recipe-card border-2 mt-2" id = cuisineNumber{{cuisine.id} >
-    <div class="row align-items-start no-gutters">
-        <div class="col mx-auto">
-              <div class="card-block px-1 mb-2">
-                  <h4 class="card-header">{{ cuisine.cuisName }}</h4>
-              </div>
-              <form action="{{ url_for('delete_cuisine'}}" method="POST">
-                  <button class = "btn btn-danger deleteRecipe" recipe_id="{{ recipe.id }}">Delete</button>
-              </form>
-               
-        </div>
-    </div>
-</div>
+<a href="{{ url_for('cuisine_view')}}">View Cuisines</a>
 
 <div class="add-cuisine-card card my-1 border-2px">
-    <form class="AddRecipe" action="" enctype="multipart/form-data" id="SubmitRecipe" method="post">
+    <form class="AddCuisine" action="" enctype="multipart/form-data" id="SubmitCuisine" method="post">
         {{ form.hidden_tag() }}
         <fieldset>
 
