--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -4,7 +4,7 @@
 
 {% for recipe in recipes %}
 
-  <div class="card recipe-card border-2 mt-2" id = recipeNumber{{recipe.id} >
+  <div class="card recipe-card border-2 mt-2" id = recipeNumber{{recipe.id}} >
       <div class="row align-items-start no-gutters">
           <div class="col mx-auto">
                 <div class="card-block px-1 mb-2">
@@ -16,10 +16,7 @@
                     <p class="card-text">Calories: {{ recipe.calories }}</p>
                     <p class="card-text">Difficulty: {{ recipe.difficulty }}</p>
                 </div>
-                <form class = view-form action="{{ url_for('edit_recipe', recipe_id = recipe_id) }}" method="GET">
-                    <input class = "btn btn-info view-btn" type="submit" name="update" value="View">
-                </form>
-                <form action="/home/delete/recipe" method="POST">
+                <form action="/home/delete/{{recipe.id}}" method="POST">
                     <button class="button">Delete</button>
                 </form>
           </div>
@@ -28,4 +25,4 @@
 
 {% endfor %}
 
-{% enblock body %}
+{% endblock body %}
