EM: changes made, all issues resolved

--- a/application/templates/create.html
+++ b/application/templates/create.html
@@ -17,28 +17,28 @@
         <fieldset>
 
             <div class="form-group">
-                {{ form.recipeName.label }} {{ form.recipeName }}
+                <b>{{ form.recipeName.label }}</b> {{ form.recipeName }}
             </div>
             <div class="form-group">
-                {{ form.creatorName.label }} {{ form.creatorName }}
+                <b>{{ form.creatorName.label }}</b> {{ form.creatorName }}
             </div>
             <div class="form-group">
-                {{ form.cuisName.label }} {{ form.cuisName }}
+                <b>{{ form.cuisName.label }}</b> {{ form.cuisName }}
             </div>
             <div class="form-group">
-                {{ form.description.label }} {{ form.description }}
+                <b>{{ form.description.label }}</b> {{ form.description }}
             </div>
             <div class="form-group">
-                {{ form.ingredients.label }} {{ form.ingredients }}
+                <b>{{ form.ingredients.label }}</b> {{ form.ingredients }}
             </div>
             <div class="form-group">
-                {{ form.instructions.label }} {{ form.instructions }}
+                <b>{{ form.instructions.label }}</b> {{ form.instructions }}
             </div>
             <div class="form-group">
-                {{ form.calories.label }} {{ form.calories }}
+                <b>{{ form.calories.label }}</b> {{ form.calories }}
             </div>
             <div class="form-group">
-                {{ form.difficulty.label }} {{ form.difficulty }}
+                <b>{{ form.difficulty.label }}</b> {{ form.difficulty }}
             </div>
             
             {{ form.submit }}
