--- a/application/templates/cuisine.html
+++ b/application/templates/cuisine.html
@@ -20,7 +20,7 @@
         <fieldset>
 
             <div class="form-group">
-                {{ form.cuisName.label }} {{ form.cuisName }}
+                <b>{{ form.cuisName.label }}</b> {{ form.cuisName }}
             </div>
             
             {{ form.submit }}
