--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -26,7 +26,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="{{ url_for('create') }}">Create a Recipe <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="{{ url_for('create') }}">Create a Recipe</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('create_cuisine') }}">Cuisine Portal</a>
