--- a/application/templates/edit.html
+++ b/application/templates/edit.html
@@ -13,11 +13,12 @@
 {% endwith %}
 
 
+
 <div class="card info-card">
     <div class="card-header">
         <ul class="nav nav-tabs card-header-tabs">
             <li class="nav-item">
-                <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-details" role="tab" aria-controls="nav-details" aria-selected="true">Info</a>
+                <a class="nav-item nav-link active" id="nav-home-tab" data-toggle="tab" href="#nav-details" role="tab" aria-controls="nav-details" aria-selected="true">Update</a>
             </li>
             <li class="nav-item">
                 <a class="nav-item nav-link" id="nav-profile-tab" data-toggle="tab" href="#nav-add" role="tab" aria-controls="nav-add" aria-selected="false">Add Recipe Note</a>
@@ -33,28 +34,28 @@
                         {{ form_update.hidden_tag() }}
                         <fieldset class = "form-group">
                             <div class="form-group">
-                                {{ form_update.recipeName }}
+                                <b>{{ form_update.recipeName.label }}</b> {{ form_update.recipeName }}
                             </div>
                             <div class="form-group">
-                                {{ form_update.creatorName}}
+                                <b>{{ form_update.creatorName.label }}</b> {{ form_update.creatorName}}
                             </div>
                             <div class="form-group">
-                                {{ form_update.cuisName}}
+                                <b>Cuisine Name:</b> {{ form_update.cuisName}}
                             </div>
                             <div class="form-group">
-                                {{ form_update.description}}
+                                <b>{{ form_update.description.label }}</b> {{ form_update.description}}
                             </div>
                             <div class="form-group">
-                                {{ form_update.ingredients}}
+                                <b>{{ form_update.ingredients.label }}</b> {{ form_update.ingredients}}
                             </div>
                             <div class="form-group">
-                                {{ form_update.instructions}}
+                                <b>{{ form_update.instructions.label }}</b> {{ form_update.instructions}}
                             </div>
                             <div class="form-group">
-                                {{ form_update.calories}}
+                                <b>{{ form_update.calories.label }}</b> {{ form_update.calories}}
                             </div>
                             <div class="form-group">
-                                {{ form_update.difficulty}}
+                                <b>{{ form_update.difficulty.label }}</b> {{ form_update.difficulty}}
                             </div>
 
                             <div class="log-button-container">
@@ -68,14 +69,13 @@
         <div class="tab-pane fade" id="nav-add" role="tabpanel" aria-labelledby="nav-add-tab">
             <div class="add-track-card card my-1" style="width: 50%;">
                 <form class="addtrack" action="" method="POST">
-                    {{ form_update.hidden_tag() }}
+                    {{ add_track.hidden_tag() }}
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item p-0">{{ form_notes.recipeName(placeholder = "Recipe Name", class_="notes-input-area") }}</li>
-                        <li class="list-group-item p-0">{{ form_notes.madeDate(placeholder = "Date Cooked", class_="notes-input-area") }}</li>
-                        <li class="list-group-item p-0">{{ form_notes.success(placeholder = "Success Rate", class_="notes-input-area") }}</li>
-                        <li class="list-group-item p-0">{{ form_notes.enjoyRate(placeholder = "Enjoyment Rating", class_="notes-input-area") }}</li>
-                        <li class="list-group-item p-0">{{ form_notes.notes(placeholder = "Notes", class_="notes-text-area") }}</li>
-                        {{ form_notes.add_tracking }}
+                        <li class="list-group-item p-0"><b>{{ add_track.madeDate.label }}</b> {{ add_track.madeDate(placeholder = "Date Cooked", class_="notes-input-area") }}</li>
+                        <li class="list-group-item p-0"><b>{{ add_track.success.label }}</b> {{ add_track.success(placeholder = "Success Rate", class_="notes-input-area") }}</li>
+                        <li class="list-group-item p-0"><b>{{ add_track.enjoyRate.label }}</b> {{ add_track.enjoyRate(placeholder = "Enjoyment Rating", class_="notes-input-area") }}</li>
+                        <li class="list-group-item p-0"><b>{{ add_track.notes.label }}</b> {{ add_track.notes(placeholder = "Notes", class_="notes-text-area") }}</li>
+                        {{ add_track.add_tracking }}
                     </ul>
                 </form>
             </div>
@@ -87,10 +87,12 @@
 <div class="card-columns my-2 mx-2">
     {% for track in recipe_notes %}
       <div class="card note-card border-dark mr-1" id= "trackNumber{{ track.id }}">
-          <div class="card-header">{{ track.recipe_name }}</div>
+          <div class="card-header">Recipe Note {{ track.id }}</div>
           <div class="card-body">
-              <p class="card-text">{{ track.notes }}</p>
-              <p class="card-text"><small class="test-muted">{{ track.made_date }}</small></p>
+              <p class="card-text"><b>Success Rate</b>: {{ track.success }}</p>
+              <p class="card-text"><b>Enjoyment Level</b>: {{ track.enjoyRate }}</p>
+              <p class="card-text"><b>Recipe Notes</b>: {{ track.notes }}</p>
+              <p class="card-text"><small class="test-muted">{{ track.madeDate }}</small></p>
           </div>
           <button class="track-delete-btn btn-dark deleteTrack" track_id = "{{ track.id }}">Delete</button>
       </div>
