EM: Made change to adding notes

--- a/application/templates/edit.html
+++ b/application/templates/edit.html
@@ -12,7 +12,7 @@
   {% endif %}
 {% endwith %}
 
-
+<h2>{{ form_update.recipeName }}</h2>
 
 <div class="card info-card">
     <div class="card-header">
